--- a/src/main/resources/static/styles/signon.scss
+++ b/src/main/resources/static/styles/signon.scss
@@ -6,7 +6,7 @@
   background: $secondary;
   display: flex;
   justify-content: flex-start;
-  gap: 10vh;
+  gap: 5vh;
   align-items: center;
   flex-flow: column;
   transition: background 1s ease-in-out;
